# ros2_opt_camera

./: CMakeLists.txt  README.md  package.xml
config/: camera_info.yaml  camera_params.yaml
launch/: opt_launch.py
optsdk/include/: OPTApi.h  OPTDefines.h
optsdk/lib/arm64/: SDKLOG_default.properties
src/: opt_camera_node.cpp
